--- a/pages/newtab/style.css
+++ b/pages/newtab/style.css
@@ -33,6 +33,7 @@ body {
     border-radius: 7px;
     box-shadow:0px 0px 25px #737373;
     transition: background-color 0.3s;
+    opacity: 1;
 }
 
 .locationbox:hover {
